# rust-substrate-treasury-proposals

./: README.md
node/: Cargo.toml
node/src/: chain_spec.rs
pallets/template/: Cargo.toml
pallets/template/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/treasury/: Cargo.toml
pallets/treasury/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
primitives/: Cargo.toml
primitives/src/: lib.rs  meme_reference.rs  treasury.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
